--- a/ReadyApp/ReadyApp/ReadyApp.csproj
+++ b/ReadyApp/ReadyApp/ReadyApp.csproj
@@ -1,8 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+	<Nullable>enable</Nullable>
+  	<LangVersion>10.0</LangVersion>
+
   </PropertyGroup>
 
   <ItemGroup>
